fixed slight shift in header navigation

--- a/assets/css/zz_master.styl
+++ b/assets/css/zz_master.styl
@@ -165,6 +165,8 @@ textarea
 
 
 // --- misc classes
+ul
+	font-size 0
 .masonry-filter-container
 	margin 0
 .masonry__filters
